[package]
name = "hyprkool"
version = "0.5.2"
edition = "2021"

license = "MIT"
repository = "https://github.com/thrombe/hyprkool"
description = "A tool that helps you replicate the feel of kde activities and desktop grid layout in Hyprland"
keywords = [
  "cli",
  "hyprland",
  "kde",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.81"
clap = { version = "4.5.3", features = ["derive"] }
dirs = "5.0.1"
# hyprland = "0.3.13"
hyprland = { git = "https://github.com/thrombe/hyprland-rs" }
linicon = "2.3.0"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
tokio = { version = "1.36.0", features = ["full"] }
toml = "0.8.11"
